--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,7 @@ html.dark {
 }
 
 html.blue {
-  background-color: #3b82f6; /* Tailwind's blue-500 */
+  background-color: #3b82f6;
   color: white;
 }
 
